--- a/src/css/style.css
+++ b/src/css/style.css
@@ -46,7 +46,7 @@ form button:hover {
 
 .todo-container {
     display: flex;
-    justify-items: center;
+    justify-content: center;
     align-items: center;
 }
 
